homework_6/task_2/service-tls.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service-tls
spec:
  selector:
    app: web-app
  ports:
    - name: https
      port: 443
      targetPort: 80
  type: LoadBalancer
